--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "homepage": "https://github.com/SamVerschueren/gulp-cordova-build-android",
   "dependencies": {
     "cordova-lib": "^8.0.0",
-    "gulp-util": "^3.0.4",
-    "q": "^1.2.0",
-    "through2": "^2.0.0"
+    "gulp-util": "3.0.8",
+    "q": "1.5.1",
+    "through2": "2.0.3"
   },
   "devDependencies": {
     "xo": "^0.13.0"
